--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -68,7 +68,7 @@ nav ul{
 }
 
 .banner-profile-pic{
-    width: 500px; /* Adjust width as needed */
+    width: 350px; /* Adjust width as needed */
     height: auto; /* Maintain aspect ratio */
     background-color: #fff; /* Add background color (optional) */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Add shadow effect */
@@ -79,7 +79,7 @@ nav ul{
 }
 
 .header{
-    background-image: url('../Portfolio/portfolio-resources/images/developer.png'),url('../Portfolio/portfolio-resources/images/header_bg.png');
+    background-image: url('../images/developer.png'),url('../images/header_bg.png');
     background-repeat: no-repeat;
     background-position:top left ,bottom right;
 }
